tests/samples/pack/k8s/01_pod_root.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pack-pod-root
spec:
  containers:
    - name: app
      image: nginx
