tests/samples/pack/k8s/02_pod_privileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pack-pod-priv
spec:
  containers:
    - name: app
      image: nginx
      securityContext:
        privileged: true
