tests/samples/pack/k8s/03_pod_no_limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pack-pod-nolimits
spec:
  containers:
    - name: app
      image: nginx
      resources: {}
