tests/samples/pack/k8s/05_no_readonly_fs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pack-no-rofs
spec:
  containers:
    - name: app
      image: nginx
      securityContext:
        readOnlyRootFilesystem: false
