tests/samples/pack/k8s/06_no_limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pack-no-limits
spec:
  containers:
    - name: app
      image: nginx
      resources: {}
