tests/samples/pack/k8s/07_privileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pack-privileged
spec:
  containers:
    - name: app
      image: nginx
      securityContext:
        privileged: true
