tests/samples/pack/k8s/10_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pack-deny-all
spec:
  podSelector: {}
  policyTypes: ["Ingress","Egress"]
